fixed logo position small screens again

--- a/client/src/styles/newcss.scss
+++ b/client/src/styles/newcss.scss
@@ -3130,14 +3130,14 @@ h1 {
 
   }
 
-  @media only screen and (max-width: 390px) {
+  // @media only screen and (max-width: 390px) {
 
-    #logo-big-screen {
-      img {
-        transform: translateX(30px);
-      }
-    }
+  //   #logo-big-screen {
+  //     img {
+  //       transform: translateX(27px);
+  //     }
+  //   }
 
-  }
+  // }
 
 }
